fixed spacing

--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ body {
   float: left;
   color: rgb(241, 241, 241);
   text-align: center;
-  padding: 14px 16px;
+  padding: 0.875rem 1rem;
   font-size: 17px;
   text-decoration: none;
 }
